--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<index>
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
@@ -14,8 +14,10 @@
       --cda-sky:#b7e3ff;
       --cda-blue:#0077b6;
       --cda-red:#e63946;
+
       --radius-lg:18px;
       --shadow-soft:0 14px 30px rgba(0,0,0,.12);
+      --shadow-card:0 8px 20px rgba(0,0,0,.04);
     }
 
     *{ box-sizing:border-box; margin:0; padding:0; font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif; }
@@ -91,6 +93,7 @@
       align-items:stretch;
     }
 
+    /* Linkerkolom */
     .quiz-panel{
       flex:1 1 560px;
       padding:20px 26px 24px;
@@ -99,8 +102,10 @@
       display:flex;
       flex-direction:column;
       gap:14px;
+      min-width:320px;
     }
 
+    /* Rechterkolom */
     .side-panel{
       flex:1 1 320px;
       padding:22px 22px 22px 18px;
@@ -108,14 +113,15 @@
       display:flex;
       flex-direction:column;
       gap:14px;
+      min-width:280px;
     }
 
-    .intro{ margin-bottom:14px; }
+    .intro{ margin-bottom:10px; }
     .intro-title{ font-size:22px; margin-bottom:6px; color:#102620; }
     .intro-subtitle{ font-size:14px; color:#5b706b; line-height:1.4; }
     .intro-subtitle strong{ color:var(--cda-green-dark); }
 
-    .progress-bar-wrapper{ margin:16px 0 14px; }
+    .progress-bar-wrapper{ margin:10px 0 8px; }
     .progress-header{
       display:flex; justify-content:space-between; align-items:center;
       font-size:12px; color:#6b7f79; margin-bottom:6px;
@@ -137,7 +143,7 @@
       border-radius:var(--radius-lg);
       border:1px solid rgba(0,0,0,.05);
       padding:18px 18px 16px;
-      box-shadow:0 8px 20px rgba(0,0,0,.04);
+      box-shadow:var(--shadow-card);
     }
 
     .question-theme-tag{
@@ -160,34 +166,36 @@
       font-size:17px; line-height:1.45; color:#10211c; margin-bottom:14px;
     }
 
-    .options-list{ list-style:none; display:flex; flex-direction:column; gap:8px; margin-bottom:12px; }
+    .options-list{ list-style:none; display:flex; flex-direction:column; gap:10px; margin-bottom:12px; }
     .option{
-      border-radius:999px;
+      border-radius:16px;
       border:1px solid #d0dde0;
-      padding:10px 14px;
+      padding:12px 14px;
       font-size:14px;
       display:flex;
-      align-items:center;
+      align-items:flex-start;
       gap:10px;
       background:#fff;
       cursor:pointer;
       transition:border-color .18s ease, box-shadow .18s ease, transform .05s ease, background .2s ease;
       width:100%;
       text-align:left;
+      line-height:1.35;
     }
     .option:hover{
       border-color:var(--cda-green);
       box-shadow:0 0 0 1px rgba(0,123,94,.16);
       transform:translateY(-1px);
     }
-    .option.disabled{ cursor:default; opacity:.88; transform:none; box-shadow:none; }
+    .option.disabled{ cursor:default; opacity:.92; transform:none; box-shadow:none; }
     .option-label{
-      width:22px; height:22px; border-radius:50%;
+      width:26px; height:26px; border-radius:50%;
       border:2px solid #c7d3d8;
       display:inline-flex; align-items:center; justify-content:center;
-      font-size:11px; font-weight:800;
+      font-size:12px; font-weight:900;
       background:#f8fbfc;
       flex:0 0 auto;
+      margin-top:1px;
     }
     .option-text{ flex:1; color:#12302a; }
 
@@ -221,6 +229,7 @@
       align-items:center;
       gap:10px;
       margin-top:6px;
+      flex-wrap:wrap;
     }
 
     .score-pill{
@@ -239,9 +248,9 @@
     button{
       border:none;
       border-radius:999px;
-      padding:9px 18px;
+      padding:10px 18px;
       font-size:13px;
-      font-weight:800;
+      font-weight:900;
       letter-spacing:.03em;
       text-transform:uppercase;
       cursor:pointer;
@@ -282,12 +291,12 @@
     .side-header{ font-size:15px; font-weight:900; color:#15352e; }
     .side-sub{ font-size:13px; color:#5f6b65; margin-top:4px; line-height:1.35; }
 
-    .theme-chips{ display:flex; flex-wrap:wrap; gap:6px; margin-top:6px; }
+    .theme-chips{ display:flex; flex-wrap:wrap; gap:8px; margin-top:6px; }
     .chip{
       font-size:11px;
-      padding:6px 10px;
+      padding:7px 11px;
       border-radius:999px;
-      background:rgba(255,255,255,.80);
+      background:rgba(255,255,255,.85);
       border:1px solid rgba(0,0,0,.07);
       cursor:pointer;
       display:inline-flex;
@@ -309,7 +318,7 @@
     .theme-details h3{ font-size:14px; margin-bottom:4px; color:#163029; }
     .theme-details p{ font-size:13px; color:#4a5a55; line-height:1.4; }
 
-    /* Realisatie blok (linksonder in quiz-panel) */
+    /* Realisatie blok (linksonder) */
     .realisatie{
       background:rgba(255,255,255,.92);
       border-radius:16px;
@@ -332,16 +341,18 @@
     }
     .cta-card strong{ display:block; font-size:14px; color:#0f2721; margin-bottom:4px; }
     .cta-card p{ font-size:12px; color:#12302a; margin-bottom:8px; line-height:1.35; }
-    .cta-inline{ display:flex; align-items:center; gap:14px; }
+
+    .cta-inline{ display:flex; align-items:center; gap:14px; flex-wrap:wrap; }
     .cta-slogan{
       display:flex;
       flex-direction:column;
       line-height:1.1;
       font-size:13px;
       color:#12302a;
-      font-weight:800;
+      font-weight:900;
     }
     .cta-slogan span:nth-child(2){ align-self:center; }
+
     .share-text{ font-size:11px; margin-top:6px; color:#435450; line-height:1.35; }
     .share-text code{
       background:rgba(255,255,255,.85);
@@ -350,60 +361,78 @@
       font-size:11px;
     }
 
+    /* ============================
+       Smartphone optimalisatie
+       ============================ */
     @media (max-width: 600px){
-      body{ padding:10px; }
+      body{ padding:8px; }
+
+      .app{ border-radius:18px; }
+
       header{
-        padding:14px 14px 10px;
+        padding:12px 12px 10px;
         flex-direction:column;
         align-items:flex-start;
-        gap:10px;
+        gap:8px;
       }
-      .brand-logo{ width:64px; height:64px; font-size:18px; }
-      .brand-text h1{ font-size:18px; }
+
+      .brand-logo{ width:56px; height:56px; font-size:16px; }
+      .brand-text h1{ font-size:17px; line-height:1.2; }
       .brand-text p{ font-size:12px; }
 
       .badge-election{
-        align-self:stretch;
+        width:100%;
         justify-content:space-between;
         font-size:10px;
-        padding:8px 10px;
-        flex-wrap:wrap;
+        padding:7px 10px;
       }
 
       main{ display:block; }
+
       .quiz-panel{
+        padding:12px 12px 14px;
         border-right:none;
         border-bottom:1px solid rgba(0,0,0,.06);
-        padding:14px 14px 18px;
+        min-width:auto;
       }
-      .side-panel{ padding:14px; }
 
-      .intro-title{ font-size:19px; }
+      .side-panel{
+        padding:12px;
+        min-width:auto;
+      }
+
+      .intro-title{ font-size:18px; }
       .intro-subtitle{ font-size:13px; }
 
       .question-text{ font-size:16px; }
-      .option{ padding:12px 13px; }
+
+      .options-list{ gap:10px; }
+      .option{ padding:14px 14px; font-size:15px; border-radius:16px; }
+      .option-label{ width:28px; height:28px; font-size:12px; }
 
       .quiz-footer{
         flex-direction:column-reverse;
         align-items:stretch;
+        gap:10px;
       }
       .quiz-footer > div:last-child{
-        width:100%;
         display:flex;
         gap:8px;
+        width:100%;
       }
       .btn-primary,.btn-secondary{
-        flex:1 1 auto;
-        padding:11px 12px;
+        flex:1;
+        padding:13px 12px;
         font-size:12px;
       }
 
       .cta-inline{
         flex-direction:column;
         align-items:flex-start;
+        gap:8px;
       }
 
+      /* Op mobiel niet "hard" naar onderaan duwen */
       .realisatie{ margin-top:12px; }
     }
   </style>
@@ -411,7 +440,7 @@
 
 <body>
   <div id="cda-dorpsquiz">
-    <div class="app" role="application" aria-label="Bewustwordingsspel CDA Zandvoort">
+    <div class="app" role="application" aria-label="CDA Zandvoort Dorpsquiz">
       <header>
         <div class="brand">
           <div class="brand-logo" aria-hidden="true">CDA</div>
@@ -464,7 +493,7 @@
                 <span class="score-dot"></span>
                 <span id="scoreText">0 goede antwoorden</span>
               </div>
-              <div style="display:flex; gap:6px;">
+              <div style="display:flex; gap:8px;">
                 <button type="button" class="btn-secondary" id="restartBtn">Opnieuw spelen</button>
                 <button type="button" class="btn-primary" id="nextBtn" disabled>
                   Volgende vraag <span aria-hidden="true">→</span>
@@ -531,9 +560,7 @@
     (function () {
       function $(id){ return document.getElementById(id); }
 
-      // ----------------------------
-      // 1) Basisvragen (niet muteren)
-      // ----------------------------
+      // Basisvragen (niet muteren)
       var baseQuestions = [
         {
           theme: "1. Wonen",
@@ -669,7 +696,6 @@
         }
       ];
 
-      // Thema-samenvattingen (klikchips)
       var themeSummaries = {
         "1. Wonen": { title:"Wonen – Zandvoorters moeten Zandvoorters kunnen blijven", text:"Betaalbaar bouwen, minimaal 50% toewijzen aan Zandvoorters, sturen op zelfbewoning/antispeculatie en woningonttrekking tegengaan." },
         "2. Verkeer & bereikbaarheid": { title:"Verkeer & bereikbaarheid – slim en wijkgericht", text:"Jaarlijks monitoren per wijk, knelpunten aanpakken, (ondergronds/halfgroen) parkeren waar nodig, beter fietsparkeren en OV/doorstroming." },
@@ -685,9 +711,7 @@
         "12. Bestuurlijke samenwerking": { title:"Bestuurlijke samenwerking – Zandvoort blijft Zandvoort", text:"Samenwerken waar nodig, maar met een sterk gebiedsteam/kernteam voor Zandvoortse projecten en betere dienstverlening." }
       };
 
-      // ---------------------------------------
-      // 2) Shuffle helpers (Fisher–Yates)
-      // ---------------------------------------
+      // Fisher–Yates shuffle
       function shuffleArray(arr){
         for (var i = arr.length - 1; i > 0; i--){
           var j = Math.floor(Math.random() * (i + 1));
@@ -698,7 +722,7 @@
         return arr;
       }
 
-      // Maak een verse quizset + shuffle opties per vraag (correctIndex blijft correct)
+      // Bouw quiz met geshuffelde opties (correctIndex blijft correct)
       function buildShuffledQuiz(){
         var cloned = baseQuestions.map(function(q){
           return {
@@ -724,9 +748,7 @@
         return cloned;
       }
 
-      // ----------------------------
-      // 3) UI & quiz logic
-      // ----------------------------
+      // Elements
       var totalQuestionsEl = $("totalQuestions");
       var questionNumberEl = $("questionNumber");
       var progressFillEl = $("progressFill");
@@ -748,23 +770,25 @@
       var answeredCurrent = false;
 
       function initQuiz(){
-        // ✅ elke start opnieuw shuffle
         quizQuestions = buildShuffledQuiz();
 
         totalQuestionsEl.textContent = quizQuestions.length;
         currentQuestionIndex = 0;
         score = 0;
         answeredCurrent = false;
+
         resultsBannerEl.style.display = "none";
+        nextBtn.disabled = true;
+        nextBtn.textContent = "Volgende vraag →";
+
         loadQuestion();
         updateProgress();
         updateScore();
-        nextBtn.disabled = true;
-        nextBtn.textContent = "Volgende vraag →";
       }
 
       function loadQuestion(){
         var q = quizQuestions[currentQuestionIndex];
+
         questionNumberEl.textContent = (currentQuestionIndex + 1);
         themeNameEl.textContent = q.theme;
         questionTextEl.textContent = q.question;
@@ -772,11 +796,13 @@
         explanationBoxEl.style.display = "none";
         explanationBoxEl.textContent = "";
         optionsListEl.innerHTML = "";
+
         answeredCurrent = false;
         nextBtn.disabled = true;
 
         q.options.forEach(function(opt, index){
           var li = document.createElement("li");
+
           var btn = document.createElement("button");
           btn.type = "button";
           btn.className = "option";
@@ -878,15 +904,11 @@
 
       restartBtn.addEventListener("click", function(){
         initQuiz();
-        // chips blijven gelijk; details resetten naar thema 1
-        var firstTheme = quizQuestions[0] ? quizQuestions[0].theme : null;
-        if(firstTheme) updateThemeDetails(firstTheme);
-        setActiveChip(firstTheme);
+        updateThemeDetails(baseQuestions[0].theme);
+        setActiveChip(baseQuestions[0].theme);
       });
 
-      // Thema-chips
       function initThemeChips(){
-        // chips op basis van baseQuestions (stabiele volgorde 1..12)
         var themes = baseQuestions.map(function(q){ return q.theme; });
 
         themeChipsEl.innerHTML = "";
@@ -913,7 +935,7 @@
           themeChipsEl.appendChild(chip);
         });
 
-        if(themes[0]) updateThemeDetails(themes[0]);
+        updateThemeDetails(themes[0]);
       }
 
       function setActiveChip(theme){
@@ -935,8 +957,6 @@
       // Start
       initThemeChips();
       initQuiz();
-      // Zet detail naar eerste thema (base)
-      updateThemeDetails(baseQuestions[0].theme);
     })();
   </script>
 </body>
